@@ -24,12 +24,31 @@ import java.util.List;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
+import java.util.HashSet;
+import java.util.Set;
 
 public class RelauncherGUI extends JDialog {
 
     static {
         try {
-            UIManager.setLookAndFeel(UIManager.getSystemLookAndFeelClassName());
+            // Set Nimbus Look and Feel
+            for (UIManager.LookAndFeelInfo info : UIManager.getInstalledLookAndFeels()) {
+                if ("Nimbus".equals(info.getName())) {
+                    UIManager.setLookAndFeel(info.getClassName());
+                    break;
+                }
+            }
+            
+            // Set Global Font
+            Font font = new Font("Segoe UI", Font.PLAIN, 14);
+            java.util.Enumeration<Object> keys = UIManager.getDefaults().keys();
+            while (keys.hasMoreElements()) {
+                Object key = keys.nextElement();
+                Object value = UIManager.get(key);
+                if (value instanceof javax.swing.plaf.FontUIResource) {
+                    UIManager.put(key, font);
+                }
+            }
         } catch (Exception ignore) { }
     }
 
@@ -146,6 +165,11 @@ public class RelauncherGUI extends JDialog {
 
     public CleanroomRelease selected;
     public String javaPath, javaArgs;
+    public String maxMemory;
+    public String gcType;
+    public Set<String> jvmFlags;
+
+    private JTextField argsField; // Reference to the args text field
 
     private JFrame frame;
 
@@ -181,7 +205,7 @@ public class RelauncherGUI extends JDialog {
         GraphicsDevice screen = env.getDefaultScreenDevice();
         Rectangle rect = screen.getDefaultConfiguration().getBounds();
         int width = rect.width / 3;
-        int height = (int) (width / 1.25f);
+        int height = (int) (width * 1.5f); // Increased height for new options
         int x = (rect.width - width) / 2;
         int y = (rect.height - height) / 2;
         this.setLocation(x, y);
@@ -191,14 +215,11 @@ public class RelauncherGUI extends JDialog {
 
         JLabel cleanroomLogo = new JLabel(new ImageIcon(frame.getIconImage().getScaledInstance(80, 80, Image.SCALE_SMOOTH)));
 
-        JPanel cleanroomPickerPanel = this.initializeCleanroomPicker(eligibleReleases);
-        mainPanel.add(cleanroomPickerPanel);
-
-        JPanel javaPickerPanel = this.initializeJavaPicker();
-        mainPanel.add(javaPickerPanel);
-
-        JPanel argsPanel = this.initializeArgsPanel();
-        mainPanel.add(argsPanel);
+        mainPanel.add(initializeBasicOptions(eligibleReleases));
+        mainPanel.add(Box.createRigidArea(new Dimension(0, 10)));
+        mainPanel.add(initializeAdvancedOptions());
+        mainPanel.add(Box.createRigidArea(new Dimension(0, 10)));
+        mainPanel.add(initializeRelaunchPanel());
 
         JPanel contentPanel = new JPanel();
         contentPanel.setLayout(new BorderLayout());
@@ -214,10 +235,7 @@ public class RelauncherGUI extends JDialog {
         gbc.fill = GridBagConstraints.HORIZONTAL;
         wrapper.add(contentPanel, gbc);
 
-        JPanel relaunchButtonPanel = this.initializeRelaunchPanel();
-
         this.add(wrapper, BorderLayout.NORTH);
-        this.add(relaunchButtonPanel, BorderLayout.SOUTH);
         float scale = rect.width / 1463f;
         scaleComponent(this, scale);
 
@@ -227,237 +245,311 @@ public class RelauncherGUI extends JDialog {
         this.setAutoRequestFocus(true);
     }
 
-    private JPanel initializeCleanroomPicker(List<CleanroomRelease> eligibleReleases) {
-        // Main Panel
-        JPanel cleanroomPicker = new JPanel(new BorderLayout(5, 0));
-        cleanroomPicker.setBorder(BorderFactory.createEmptyBorder(10, 10, 10, 10));
+    private JPanel initializeBasicOptions(List<CleanroomRelease> eligibleReleases) {
+        JPanel panel = new JPanel();
+        panel.setLayout(new BoxLayout(panel, BoxLayout.Y_AXIS));
+        panel.setBorder(BorderFactory.createTitledBorder("Basic Options"));
 
-        JPanel select = new JPanel();
-        select.setLayout(new BoxLayout(select, BoxLayout.Y_AXIS));
-        cleanroomPicker.add(select);
-
-        // Title label
-        JLabel title = new JLabel("Select Cleanroom Version:");
-        title.setAlignmentX(Component.LEFT_ALIGNMENT);
-        select.add(title);
-        select.add(Box.createRigidArea(new Dimension(0, 5)));
-
-        // Create dropdown panel
-        JPanel dropdown = new JPanel(new BorderLayout(5, 5));
-        dropdown.setAlignmentX(Component.LEFT_ALIGNMENT);
-        select.add(dropdown);
-
-        // Create the dropdown with release versions
-        JComboBox<CleanroomRelease> releaseBox = new JComboBox<>();
-        DefaultComboBoxModel<CleanroomRelease> releaseModel = new DefaultComboBoxModel<>();
-        for (CleanroomRelease release : eligibleReleases) {
-            releaseModel.addElement(release);
-        }
-        releaseBox.setModel(releaseModel);
+        // Cleanroom Version
+        JPanel crPanel = new JPanel(new BorderLayout(5, 5));
+        crPanel.add(new JLabel("Cleanroom Loader:"), BorderLayout.NORTH);
+        
+        JComboBox<CleanroomRelease> releaseBox = new JComboBox<>(eligibleReleases.toArray(new CleanroomRelease[0]));
         releaseBox.setRenderer(new DefaultListCellRenderer() {
             @Override
             public Component getListCellRendererComponent(JList<?> list, Object value, int index, boolean isSelected, boolean cellHasFocus) {
                 super.getListCellRendererComponent(list, value, index, isSelected, cellHasFocus);
                 if (value instanceof CleanroomRelease) {
-                    setText(((CleanroomRelease) value).name);
+                    setText(((CleanroomRelease) value).tagName);
                 }
                 return this;
             }
         });
-        releaseBox.setSelectedItem(selected);
-        releaseBox.setMaximumRowCount(5);
-        releaseBox.addActionListener(e -> selected = (CleanroomRelease) releaseBox.getSelectedItem());
-        dropdown.add(releaseBox, BorderLayout.CENTER);
 
-        return cleanroomPicker;
-    }
-
-    private JPanel initializeJavaPicker() {
-        // Main Panel
-        JPanel javaPicker = new JPanel(new BorderLayout(5, 0));
-        javaPicker.setBorder(BorderFactory.createEmptyBorder(20, 10, 0, 10));
-
-        // Select Panel
-        JPanel selectPanel = new JPanel(new BorderLayout(5, 5));
-        selectPanel.setLayout(new BoxLayout(selectPanel, BoxLayout.Y_AXIS));
-        JPanel subSelectPanel = new JPanel(new BorderLayout(5, 5));
-        JLabel title = new JLabel("Select Java Executable:");
-        JTextField text = new JTextField(100);
-        text.setText(javaPath);
-        JPanel northPanel = new JPanel();
-        northPanel.setLayout(new BorderLayout(5, 0));
-        northPanel.add(title, BorderLayout.NORTH);
-        subSelectPanel.add(northPanel, BorderLayout.NORTH);
-        subSelectPanel.add(text, BorderLayout.CENTER);
-        // JButton browse = new JButton(UIManager.getIcon("FileView.directoryIcon"));
-        JButton browse = new JButton("Browse");
-        subSelectPanel.add(browse, BorderLayout.EAST);
-        selectPanel.add(subSelectPanel);
-        javaPicker.add(selectPanel);
-
-        // Java Version Dropdown
-        JPanel versionDropdown = new JPanel(new BorderLayout(5, 0));
-        versionDropdown.setAlignmentX(Component.LEFT_ALIGNMENT);
-        JComboBox<JavaInstall> versionBox = new JComboBox<>();
-        DefaultComboBoxModel<JavaInstall> versionModel = new DefaultComboBoxModel<>();
-        versionBox.setModel(versionModel);
-        versionBox.setRenderer(new DefaultListCellRenderer() {
-            @Override
-            public Component getListCellRendererComponent(JList<?> list, Object value, int index, boolean isSelected, boolean cellHasFocus) {
-                super.getListCellRendererComponent(list, value, index, isSelected, cellHasFocus);
-                if (value instanceof JavaInstall) {
-                    JavaInstall javaInstall = (JavaInstall) value;
-                    setText(javaInstall.vendor() + " " + javaInstall.version());
-                }
-                return this;
-            }
-        });
-        versionBox.setSelectedItem(null);
-        versionBox.setMaximumRowCount(10);
-        versionBox.addActionListener(e -> {
-            if (versionBox.getSelectedItem() != null) {
-                JavaInstall javaInstall = (JavaInstall) versionBox.getSelectedItem();
-                javaPath = javaInstall.executable(true).getAbsolutePath();
-                text.setText(javaPath);
-            }
-        });
-        versionDropdown.add(versionBox, BorderLayout.CENTER);
-        versionDropdown.setVisible(false);
-        northPanel.add(versionDropdown, BorderLayout.CENTER);
-
-        // Options Panel
-        JPanel options = new JPanel(new BorderLayout(5, 0));
-        options.setLayout(new BoxLayout(options, BoxLayout.X_AXIS));
-        options.setBorder(BorderFactory.createEmptyBorder(10, 10, 10, 10));
-        selectPanel.add(options);
-        // JButton download = new JButton("Download");
-        JButton autoDetect = new JButton("Auto-Detect");
-        JButton test = new JButton("Test");
-        options.add(autoDetect);
-        options.add(test);
-
-        listenToTextFieldUpdate(text, t -> javaPath = t.getText());
-        addTextBoxEffect(text);
-
-        browse.addActionListener(e -> {
-            JFileChooser fileChooser = new JFileChooser();
-            fileChooser.setDialogTitle("Find Java Executable");
-            if (!text.getText().isEmpty()) {
-                File currentFile = new File(text.getText());
-                if (currentFile.getParentFile() != null && currentFile.getParentFile().exists()) {
-                    fileChooser.setCurrentDirectory(currentFile.getParentFile());
+        int index = -1;
+        if (selected != null) {
+            for (int i = 0; i < eligibleReleases.size(); i++) {
+                if (eligibleReleases.get(i).tagName.equals(selected.tagName)) {
+                    index = i;
+                    break;
                 }
             }
-            FileFilter filter = new FileFilter() {
+        }
+        if (index != -1) {
+            releaseBox.setSelectedIndex(index);
+        }
+        releaseBox.addActionListener(e -> {
+            CleanroomRelease r = (CleanroomRelease) releaseBox.getSelectedItem();
+            if (r != null) {
+                selected = r;
+            }
+        });
+        crPanel.add(releaseBox, BorderLayout.CENTER);
+        panel.add(crPanel);
+        panel.add(Box.createRigidArea(new Dimension(0, 10)));
+
+        // Java Path
+        JPanel javaPanel = new JPanel(new BorderLayout(5, 5));
+        javaPanel.add(new JLabel("Java Executable:"), BorderLayout.NORTH);
+
+        JTextField javaField = new JTextField(javaPath);
+        javaField.setColumns(30);
+        addTextBoxEffect(javaField);
+        listenToTextFieldUpdate(javaField, t -> javaPath = t.getText());
+        
+        javaPanel.add(javaField, BorderLayout.CENTER);
+        
+        // Buttons: Browse, Auto, Test
+        JPanel btnPanel = new JPanel(new FlowLayout(FlowLayout.RIGHT, 5, 0));
+        JButton browseBtn = new JButton("Browse");
+        browseBtn.addActionListener(e -> {
+            JFileChooser chooser = new JFileChooser();
+            chooser.setFileSelectionMode(JFileChooser.FILES_ONLY);
+            if (chooser.showOpenDialog(frame) == JFileChooser.APPROVE_OPTION) {
+                javaField.setText(chooser.getSelectedFile().getAbsolutePath());
+                javaPath = javaField.getText();
+            }
+        });
+        
+        JButton autoBtn = new JButton("Auto-Detect");
+        autoBtn.addActionListener(e -> {
+            String javaHomePath = System.getProperty("java.home");
+            if (javaHomePath != null) {
+                 File javaBin = new File(javaHomePath, "bin/java" + (Platform.current().isWindows() ? ".exe" : ""));
+                 if (javaBin.exists()) {
+                     try {
+                        String path = javaBin.getCanonicalPath();
+                        javaField.setText(path);
+                        javaPath = path;
+                     } catch (IOException ex) {
+                         ex.printStackTrace();
+                     }
+                 }
+            }
+        });
+
+        JButton testBtn = new JButton("Test");
+        testBtn.addActionListener(e -> {
+            new SwingWorker<Boolean, Void>() {
                 @Override
-                public boolean accept(File file) {
-                    if (file.isDirectory()) {
-                        return true;
+                protected Boolean doInBackground() {
+                    try {
+                        Process process = new ProcessBuilder(javaPath, "-version").start();
+                        return process.waitFor() == 0;
+                    } catch (Exception ex) {
+                        return false;
                     }
-                    if (file.isFile()) {
-                        return !Platform.current().isWindows() || file.getName().endsWith(".exe");
-                    }
-                    return false;
                 }
-
-                @Override
-                public String getDescription() {
-                    return Platform.current().isWindows() ? "Java Executable (*.exe)" : "Java Executable";
-                }
-            };
-            fileChooser.setFileFilter(filter);
-            fileChooser.setFileSelectionMode(JFileChooser.FILES_ONLY);
-            int result = fileChooser.showOpenDialog(this);
-            if (result == JFileChooser.APPROVE_OPTION) {
-                text.setText(fileChooser.getSelectedFile().getAbsolutePath());
-            }
-        });
-
-        test.addActionListener(e -> {
-            String javaPath = text.getText();
-            if (javaPath.isEmpty()) {
-                JOptionPane.showMessageDialog(this, "Please select a Java executable first.", "No Java Selected", JOptionPane.WARNING_MESSAGE);
-                return;
-            }
-            File javaFile = new File(javaPath);
-            if (!javaFile.exists()) {
-                JOptionPane.showMessageDialog(this, "The selected Java executable does not exist.", "Invalid Java Executable Path", JOptionPane.ERROR_MESSAGE);
-                return;
-            }
-            JDialog testing = new JDialog(this, "Testing Java Executable", true);
-            testing.setLocationRelativeTo(this);
-
-            this.testJava();
-        });
-
-        autoDetect.addActionListener(e -> {
-            String original = autoDetect.getText();
-            autoDetect.setText("Detecting");
-            autoDetect.setEnabled(false);
-
-            AtomicInteger dotI = new AtomicInteger(0);
-            String[] dots = { ".", "..", "..." };
-            Timer timer = new Timer(400, te -> {
-                autoDetect.setText("Detecting" + dots[dotI.get()]);
-                dotI.set((dotI.get() + 1) % dots.length);
-            });
-            timer.start();
-
-            new SwingWorker<Void, Void>() {
-
-                List<JavaInstall> javaInstalls = Collections.emptyList();
-
-                @Override
-                protected Void doInBackground() {
-                    this.javaInstalls = JavaLocator.locators().parallelStream()
-                            .map(JavaLocator::all)
-                            .flatMap(Collection::stream)
-                            .filter(javaInstall -> javaInstall.version().major() >= 21)
-                            .distinct()
-                            .sorted()
-                            .collect(Collectors.toList());
-                    return null;
-                }
-
                 @Override
                 protected void done() {
-                    timer.stop();
-                    autoDetect.setText(original);
-                    JOptionPane.showMessageDialog(RelauncherGUI.this, javaInstalls.size() + " Java 21+ Installs Found!", "Auto-Detection Finished", JOptionPane.INFORMATION_MESSAGE);
-                    autoDetect.setEnabled(true);
-
-                    if (!javaInstalls.isEmpty()) {
-                        versionModel.removeAllElements();
-                        for (JavaInstall install : javaInstalls) {
-                            versionModel.addElement(install);
+                    try {
+                        if (get()) {
+                            JOptionPane.showMessageDialog(frame, "Java is valid!", "Success", JOptionPane.INFORMATION_MESSAGE);
+                        } else {
+                            JOptionPane.showMessageDialog(frame, "Java check failed.", "Error", JOptionPane.ERROR_MESSAGE);
                         }
-                        versionDropdown.setVisible(true);
+                    } catch (Exception ex) {
+                        JOptionPane.showMessageDialog(frame, "Error checking Java: " + ex.getMessage(), "Error", JOptionPane.ERROR_MESSAGE);
                     }
                 }
-
             }.execute();
-
         });
+        
+        btnPanel.add(browseBtn);
+        btnPanel.add(autoBtn);
+        btnPanel.add(testBtn);
+        
+        javaPanel.add(btnPanel, BorderLayout.SOUTH);
+        panel.add(javaPanel);
 
-        return javaPicker;
+        return panel;
     }
 
-    private JPanel initializeArgsPanel() {
-        // Main Panel
-        JPanel argsPanel = new JPanel(new BorderLayout(0, 0));
-        argsPanel.setBorder(BorderFactory.createEmptyBorder(5, 10, 5, 10));
+    private JPanel initializeAdvancedOptions() {
+        JPanel panel = new JPanel();
+        panel.setLayout(new BoxLayout(panel, BoxLayout.Y_AXIS));
+        panel.setBorder(BorderFactory.createTitledBorder("Advanced Options"));
 
-        JLabel title = new JLabel("Add Java Arguments:");
-        title.setAlignmentX(Component.LEFT_ALIGNMENT);
-        JTextField text = new JTextField(100);
-        text.setText(javaArgs);
-        listenToTextFieldUpdate(text, t -> javaArgs = t.getText());
-        addTextBoxEffect(text);
+        // Memory Section
+        JPanel memGroup = new JPanel(new BorderLayout(5, 5));
+        
+        // Quick Buttons Line
+        JPanel quickMemPanel = new JPanel(new FlowLayout(FlowLayout.LEFT, 5, 0));
+        quickMemPanel.add(new JLabel("Memory:"));
+        JButton btn4G = new JButton("4GB");
+        JButton btn8G = new JButton("8GB");
+        JButton btn16G = new JButton("16GB");
+        
+        quickMemPanel.add(btn4G);
+        quickMemPanel.add(btn8G);
+        quickMemPanel.add(btn16G);
+        
+        memGroup.add(quickMemPanel, BorderLayout.NORTH);
 
-        argsPanel.add(title, BorderLayout.NORTH);
-        argsPanel.add(text, BorderLayout.CENTER);
+        // Slider and Field
+        JPanel sliderPanel = new JPanel(new BorderLayout(5, 0));
+        JSlider memorySlider = new JSlider(512, 32768, 4096);
+        
+        // Configure Slider
+        long totalRam = -1;
+        try {
+            com.sun.management.OperatingSystemMXBean osBean = (com.sun.management.OperatingSystemMXBean) java.lang.management.ManagementFactory.getOperatingSystemMXBean();
+            totalRam = osBean.getTotalPhysicalMemorySize() / (1024 * 1024);
+        } catch (Throwable t) {}
+        if (totalRam > 0) {
+            memorySlider.setMaximum((int) Math.min(totalRam, 65536));
+        }
 
-        return argsPanel;
+        int maxVal = memorySlider.getMaximum();
+        int majorTick = 4096;
+        if (maxVal > 32768) majorTick = 8192;
+        
+        memorySlider.setMajorTickSpacing(majorTick);
+        memorySlider.setPaintTicks(true);
+        memorySlider.setPaintLabels(true);
+
+        Hashtable<Integer, JLabel> labels = new Hashtable<>();
+        for (int i = 0; i <= maxVal; i += majorTick) {
+            if (i == 0) continue;
+            labels.put(i, new JLabel(i / 1024 + "G"));
+        }
+        memorySlider.setLabelTable(labels);
+
+        JTextField memoryField = new JTextField(maxMemory);
+        addTextBoxEffect(memoryField);
+        memoryField.setColumns(6);
+
+        updateSliderFromText(memorySlider, maxMemory);
+
+        // Logic
+        Runnable syncMem = () -> {
+            maxMemory = memoryField.getText();
+            updateSliderFromText(memorySlider, maxMemory);
+            updateArgumentField();
+        };
+
+        memorySlider.addChangeListener(e -> {
+            if (memorySlider.getValueIsAdjusting()) return;
+            int val = memorySlider.getValue();
+            memoryField.setText(val + "M");
+            maxMemory = memoryField.getText(); // Directly set
+            updateArgumentField();
+        });
+        
+        listenToTextFieldUpdate(memoryField, t -> syncMem.run());
+
+        // Button Actions
+        btn4G.addActionListener(e -> { memorySlider.setValue(4096); });
+        btn8G.addActionListener(e -> { memorySlider.setValue(8192); });
+        btn16G.addActionListener(e -> { memorySlider.setValue(16384); });
+
+        sliderPanel.add(memorySlider, BorderLayout.CENTER);
+        sliderPanel.add(memoryField, BorderLayout.EAST);
+        memGroup.add(sliderPanel, BorderLayout.CENTER); // Add slider below buttons
+
+        panel.add(memGroup);
+        panel.add(Box.createRigidArea(new Dimension(0, 10)));
+
+        // Flags & Args Group
+        JPanel flagsArgsGroup = new JPanel(new BorderLayout(5, 5));
+        
+        // Compact Headers Flag
+        JCheckBox compactHeaders = new JCheckBox("UseCompactObjectHeaders");
+        if (jvmFlags != null) compactHeaders.setSelected(jvmFlags.contains("UseCompactObjectHeaders"));
+        compactHeaders.addActionListener(e -> {
+             if (jvmFlags == null) jvmFlags = new HashSet<>();
+             if (compactHeaders.isSelected()) jvmFlags.add("UseCompactObjectHeaders");
+             else jvmFlags.remove("UseCompactObjectHeaders");
+             updateArgumentField();
+        });
+
+        flagsArgsGroup.add(compactHeaders, BorderLayout.NORTH);
+
+        // Args Field
+        JPanel argsRow = new JPanel(new BorderLayout(5, 5));
+        argsRow.add(new JLabel("JVM Args:"), BorderLayout.WEST);
+        argsField = new JTextField(javaArgs);
+        addTextBoxEffect(argsField);
+        listenToTextFieldUpdate(argsField, t -> javaArgs = t.getText());
+        argsRow.add(argsField, BorderLayout.CENTER);
+
+        flagsArgsGroup.add(argsRow, BorderLayout.SOUTH);
+        
+        panel.add(flagsArgsGroup);
+
+        return panel;
+    }
+
+    private void updateSliderFromText(JSlider slider, String text) {
+        if (text == null) return;
+        try {
+            String num = text.toUpperCase().replace("M", "").replace("G", "");
+            int val = Integer.parseInt(num);
+            if (text.toUpperCase().endsWith("G")) {
+                val *= 1024;
+            }
+            if (val >= slider.getMinimum() && val <= slider.getMaximum()) {
+                slider.setValue(val);
+            }
+        } catch (NumberFormatException ignored) { }
+    }
+
+    private void updateArgumentField() {
+        if (argsField == null) return;
+        String currentArgs = argsField.getText();
+
+        // Update Max Memory
+        if (maxMemory != null && !maxMemory.isEmpty()) {
+            String memArg = "-Xmx" + maxMemory;
+            if (currentArgs.contains("-Xmx")) {
+                currentArgs = currentArgs.replaceAll("-Xmx\\S+", memArg);
+            } else {
+                currentArgs = currentArgs.trim() + " " + memArg;
+            }
+        }
+
+        // Update GC
+        if (gcType != null && !gcType.isEmpty()) {
+            String gcArg = "-XX:+Use" + gcType;
+            if (currentArgs.matches(".*-XX:\\+Use.*GC.*")) {
+                 currentArgs = currentArgs.replaceAll("-XX:\\+Use\\w+GC", gcArg);
+            } else {
+                currentArgs = currentArgs.trim() + " " + gcArg;
+            }
+        }
+
+        // Update Flags
+        // CompactObjectHeaders
+        String compactHeaderArg = "-XX:+UseCompactObjectHeaders";
+        boolean hasFlag = jvmFlags != null && jvmFlags.contains("UseCompactObjectHeaders");
+        if (hasFlag) {
+             if (!currentArgs.contains(compactHeaderArg)) {
+                 currentArgs = currentArgs.trim() + " " + compactHeaderArg;
+             }
+        } else {
+            if (currentArgs.contains(compactHeaderArg)) {
+                currentArgs = currentArgs.replace(compactHeaderArg, "");
+            }
+        }
+
+        currentArgs = currentArgs.replaceAll("\\s+", " ").trim();
+        argsField.setText(currentArgs);
+        javaArgs = currentArgs;
+    }
+
+    private Runnable testJavaAndReturn() {
+        try {
+            JavaInstall javaInstall = JavaUtils.parseInstall(javaPath);
+            if (javaInstall.version().major() < 21) {
+                CleanroomRelauncher.LOGGER.fatal("Java 21+ needed, user specified Java {} instead", javaInstall.version());
+                return () -> JOptionPane.showMessageDialog(this, "Java 21 is the minimum version for Cleanroom. Currently, Java " + javaInstall.version().major() + " is selected.", "Old Java Version", JOptionPane.ERROR_MESSAGE);
+            }
+            CleanroomRelauncher.LOGGER.info("Java {} specified from {}", javaInstall.version().major(), javaPath);
+        } catch (IOException e) {
+            CleanroomRelauncher.LOGGER.fatal("Failed to execute Java for testing", e);
+            return () -> JOptionPane.showMessageDialog(this, "Failed to test Java (more information in console): " + e.getMessage(), "Java Test Failed", JOptionPane.ERROR_MESSAGE);
+        }
+        return null;
     }
 
     private JPanel initializeRelaunchPanel() {
@@ -517,36 +609,4 @@ public class RelauncherGUI extends JDialog {
             }
         });
     }
-
-    private Runnable testJavaAndReturn() {
-        try {
-            JavaInstall javaInstall = JavaUtils.parseInstall(javaPath);
-            if (javaInstall.version().major() < 21) {
-                CleanroomRelauncher.LOGGER.fatal("Java 21+ needed, user specified Java {} instead", javaInstall.version());
-                return () -> JOptionPane.showMessageDialog(this, "Java 21 is the minimum version for Cleanroom. Currently, Java " + javaInstall.version().major() + " is selected.", "Old Java Version", JOptionPane.ERROR_MESSAGE);
-            }
-            CleanroomRelauncher.LOGGER.info("Java {} specified from {}", javaInstall.version().major(), javaPath);
-        } catch (IOException e) {
-            CleanroomRelauncher.LOGGER.fatal("Failed to execute Java for testing", e);
-            return () -> JOptionPane.showMessageDialog(this, "Failed to test Java (more information in console): " + e.getMessage(), "Java Test Failed", JOptionPane.ERROR_MESSAGE);
-        }
-        return null;
-    }
-
-    private void testJava() {
-        try {
-            JavaInstall javaInstall = JavaUtils.parseInstall(javaPath);
-            if (javaInstall.version().major() < 21) {
-                CleanroomRelauncher.LOGGER.fatal("Java 21+ needed, user specified Java {} instead", javaInstall.version());
-                JOptionPane.showMessageDialog(this, "Java 21 is the minimum version for Cleanroom. Currently, Java " + javaInstall.version().major() + " is selected.", "Old Java Version", JOptionPane.ERROR_MESSAGE);
-                return;
-            }
-            CleanroomRelauncher.LOGGER.info("Java {} specified from {}", javaInstall.version().major(), javaPath);
-            JOptionPane.showMessageDialog(this, "Java executable is working correctly!", "Java Test Successful", JOptionPane.INFORMATION_MESSAGE);
-        } catch (IOException e) {
-            CleanroomRelauncher.LOGGER.fatal("Failed to execute Java for testing", e);
-            JOptionPane.showMessageDialog(this, "Failed to test Java (more information in console): " + e.getMessage(), "Java Test Failed", JOptionPane.ERROR_MESSAGE);
-        }
-    }
-
 }
